--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,5 +1,4 @@
 language: java
-sudo: false # faster builds
-
-script: "mvn clean package"
+services: postgresql
+script: "( export connection_url='jdbc:postgresql://127.0.0.1:5432/hibernate-studies-test'; export connection_username=postgres; export connection_password=; mvn clean package dependency-check:check test)"
 
