--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: java
 services: postgresql
 before_script:
-  - psql -c 'create database "hibernate-studies-test";' -U postgres
-script: "( export connection_url='jdbc:postgresql://127.0.0.1:5432/hibernate-studies-test'; export connection_username=postgres; export connection_password=; mvn clean package dependency-check:check test)"
+  - psql -c 'CREATE DATABASE "hibernate-studies-test";' -U postgres
+  - psql -c 'CREATE USER "hibernate-studies" WITH ENCRYPTED PASSWORD \'0c52788f-770c-4ddc-a6e3-19c324e1fb24\';' -U postgres
+  - psql -c 'GRANT ALL PRIVILEGES ON DATABASE "hibernate-studies-test" TO "hibernate-studies" ;' -U postgres
+script: "mvn clean package dependency-check:check test"
 
