--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,12 @@ PostgreSQL:
     - "5432:5432"
   environment:
     - DEBUG=false
-    - POSTGRES_PASSWORD=0c52788f-770c-4ddc-a6e3-19c324e1fb24
-    - POSTGRES_DB=hibernate-studies-test
-    - POSTGRES_USER=hibernate-studies
     - PGDATA=/vm_pg/data
-    # Run 
-    #  psql -h 127.0.0.1 -U hibernate-studies -d hibernate-studies-test 
-    # then
-    # CREATE DATABASE "hibernate-studies";
   volumes:
    - ./tmp/:/vm_pg/
 
+# psql -c 'CREATE DATABASE "hibernate-studies-test";' -U postgres -h 127.0.0.1 
+# psql -c "CREATE USER \"hibernate-studies\" WITH ENCRYPTED PASSWORD '0c52788f-770c-4ddc-a6e3-19c324e1fb24';" -U postgres -h 127.0.0.1
+# psql -c "GRANT ALL PRIVILEGES ON DATABASE \"hibernate-studies-test\" TO \"hibernate-studies\" ;"  -U postgres -h 127.0.0.1
+# psql -c 'CREATE DATABASE "hibernate-studies";' -U postgres -h 127.0.0.1 
+# psql -c "GRANT ALL PRIVILEGES ON DATABASE \"hibernate-studies\" TO \"hibernate-studies\" ;"  -U postgres -h 127.0.0.1
