--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <groupId>se.gewalli</groupId>
     <artifactId>hibernate-studies</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.2.RELEASE</version>
+    </parent>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
