--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
             <version>2.4.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>se.gewalli.kyminon</groupId>
+            <artifactId>kyminon</artifactId>
+            <version>1.0-SNAPSHOT</version>
+          </dependency>
     </dependencies>
     <build>
         <plugins>
